# GPT-Awesome-List-Generator

./: .env_example  .gitignore  LICENSE  README.md  auto_awesome_generator.py  awesome_list_generator.py  main.py  pyproject.toml  section_data_extractor.py  section_markdown_generator.py  streamlit.py  streamlit_run.py  utils.py
chatgpt_commands/: create_awesome_list.py
clients/: chatgpt.py
connections/: chatgpt.py  github.py  google_scholar.py  podcast.py
connections/chatgpt_setup_data/: awesome_list_context.json
data_pipelines/: github.py  google_scholar.py  youtube.py
output/: Auto-GPT.md  Data Version Control (DVC).md  Google Bard.md  Llama 2.md  bard.md
section_data_pipelines/: github.py  google.py  podcast.py  youtube.py
