[tool.poetry]
name = "auto-awesome"
version = "0.1.0"
description = ""
authors = ["alialsaeedi19 <alialsaeedi19@gmail.com>", "alronz <alronz.bilal@gmail.com>"]
readme = "README.md"
packages = [{ include = "clients" }, { include = "section_data_pipelines" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.6.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
beautifulsoup4 = "^4.12.2"
youtube-search-python = "^1.6.6"
podsearch = "^0.3.1"
streamlit = "^1.37.0"
joblib = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
